--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Spirax" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="index.css">
@@ -13,7 +14,7 @@
 <ul>
   <li><a href="#landing">Home</a></li>
   <li><a href="#aboutme">About</a></li>
-  <li><a href="#resume">Experience</a></li>
+  <li><a href="#toolkit">Résumé</a></li>
   <li><a href="#contact">Contact</a></li>
   <div id="head">Boss Shauna</div>
   <!--<a class="fa fa-google" href="https://git.generalassemb.ly/Shauna"></a>
@@ -30,7 +31,7 @@
 </div>
 
 <div id="aboutme">
-<div style="display: inline-flex; width: 100%; height:100%;background-color:#9A7ABB;font-size:36px">
+<div style="display: inline-flex; width: 100%; height:100%;background-color:#9A7ABB;font-size:40px">
 <div class="container">
 <img id="ah" style=" margin-top: -11%;" src="rainbow.png" width="200" height="300"><div class="overlay">
     <div class="text">A</div>
@@ -59,9 +60,53 @@
 </div>
 </div>
 
-<div id="atext"><i><span style="display: block;">A Full Stack Web Developer from NYC with a Business mindset</span></i></div>
+<div id="atext"><i><span style="color: #F583E9; font-family: 'Libre Baskerville', serif; text-align: center; display: block;">A Full Stack Web Developer from NYC with a Business mindset</span></i>
+<hr>
+<br>
+ <center>I use my creative vision to turn the maundane into extraordinary websites and applications. When I am not coding, you will find me dreaming about coding.</center>
+ <br>
+</div>
 
-<div class="parallax"></div>
+<div class="parallaxone"></div>
+
+<div id="toolkit" style="display: inline-flex; width: 100%; height:44%;background-color:#E434B4;font-size:40px">
+<div class="container">
+<img style=" margin-top: -7%;" src="old.png" width="200" height="300"><div class="overone">
+    <div class="text">R</div>
+  </div>
+</div>
+<div class="container">
+<img style=" margin-right: -4.1%;" src="purple.png" width="200" height="220"><div class="overone">
+    <div class="text">É</div>
+  </div>
+</div>
+<div class="container">
+<img style="margin-top: -20%; margin-right: -4%;" src="grey.png" width="210" height="320"><div class="overone">
+    <div class="text">S</div>
+  </div>
+</div>
+<div class="container">
+<img style="float: right; margin-top: -7.8%;" src="dtb.png" width="220" height="370"><div class="overone">
+    <div class="text">U</div>
+  </div>
+</div>
+<div class="container">
+<img style=" margin-top: -12.8%;" src="t.png" width="200" height="300"><div class="overone">
+    <div class="text">M</div>
+  </div>
+</div>
+<div class="container">
+<img style="float: right; margin-top: -4%;" src="ten.png" width="200" height="300"><div class="overone">
+    <div class="text">É</div>
+  </div>
+</div>
+</div>
+
+<div id="rtext"><i><span style="color: black; font-family: 'Libre Baskerville', serif; text-align: center; display: block;">RÉSUMÉ</span></i>
+<hr id="hrone">
+<img src="chart.png" width="60%" height="60%">
+<div id="checks">&#10004; B.S. in Information Systems & Finance</div>
+</div>
 
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
