--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
  <br>
 </div>
 
+<div class="parallaxhalf"></div>
+<div id="ttext"><span style="font-size: 74px; color: #F583E9; font-family: 'Libre Baskerville', serif; text-align: center; display: block;">Coding Quote of the Day</span> "99% of the time it's a ayntax error."<div id="troll"><br></div><br></div>
+
+
 <div class="parallaxone"></div>
 
 <div id="toolkit" style="display: inline-flex; width: 100%; height:44%;background-color:#E434B4;font-size:40px">
@@ -104,9 +108,80 @@
 
 <div id="rtext"><i><span style="color: black; font-family: 'Libre Baskerville', serif; text-align: center; display: block;">RÉSUMÉ</span></i>
 <hr id="hrone">
-<img src="chart.png" width="60%" height="60%">
-<div id="checks">&#10004; B.S. in Information Systems & Finance</div>
+<center><img src="chart.png" width="60%" height="60%"></center>
 </div>
+
+<div class="parallaxtwo"></div>
+
+<div id="checks">
+<hr id="hrone">
+<span style="color: black">&#10004;</span> B.S. in <span style="color: gold">Information Systems & Finance</span><br><br>
+<span style="color: black">&#10004;</span>  3 month <span style="color: gold">Web Develoment Immersive</span> @ General Assembly<br><br>
+<span style="color: black">&#10004;</span>  <span style="color: gold">Codebridge</span> program @ Per Scholas<br><br>
+<span style="color: black">&#10004;</span>  11 month <span style="color: gold">Financial Operations</span> @ Year Up<br><br>
+<span style="color: black">&#10004;</span> <span style="color: gold">Project Management</span> Internship @ New York Life
+</div>
+
+<div class="parallaxthree"></div>
+
+
+<div style="margin-top: -10%;" id="contact">
+<div style="display: inline-flex; width: 100%; height:100%;background-color:#9A7ABB;font-size:40px">
+<div class="container">
+<img id="ah" style=" margin-top: -7%;" src="dots.png" width="180" height="300"><div class="overlay">
+    <div class="text">C</div>
+  </div>
+</div>
+<div class="container">
+<img id="bh" style=" margin-right: -4.1%;" src="fun.png" width="180" height="300"><div class="overlay">
+    <div class="text">O</div>
+  </div>
+</div>
+<div class="container">
+<img id="oh" style="margin-top: 1%; margin-right: -4%;" src="train.png" width="180" height="300"><div class="overlay">
+    <div class="text">N</div>
+  </div>
+</div>
+<div class="container">
+<img id="uh" style="float: right; margin-top: -0.8%;" src="snapy.png" width="180" height="240"><div class="overlay">
+    <div class="text">T</div>
+  </div>
+</div>
+<div class="container">
+<img id="ah" style=" margin-top: -14%;" src="hatty.png" width="180" height="320"><div class="overlay">
+    <div class="text">A</div>
+  </div>
+</div>
+<div class="container">
+<img id="bh" style=" margin-right: -4.1%;" src="hot.png" width="180" height="240"><div class="overlay">
+    <div class="text">C</div>
+  </div>
+</div>
+<div class="container">
+<img id="th" style="float: right; margin-top: -0%;" src="twin.png" width="180" height="300"><div class="overlay">
+    <div class="text">T</div><br>
+  </div>
+</div>
+</div>
+</div>
+
+<footer><div class="forms">
+  <form action="/action_page.php">
+<br><br>
+    <label for="name">Full Name</label>
+    <input type="text" id="name" name="full name" placeholder="Your full name...">
+
+    <label for="web">Website URL</label>
+    <input type="text" id="web" name="website" placeholder="Link to your website...">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="What do you have to say?..." style="height:300px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div></footer>
+ 
 
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
